examples/kyverno/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: unicorn-app
  labels:
    owner: glen
#    env: dev
